Add fmt and clippy checks to CI
Increases the robustness of the CI checks by introducing formatting and linting via the use of `cargo fmt` and `cargo clippy` commands.

This commit also includes the fixes obtained by running the above.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -28,3 +28,9 @@ jobs:
 
       - name: Test
         run: cargo test --verbose
+
+      - name: Format
+        run: cargo fmt --all -- --check
+
+      - name: Clippy
+        run: cargo clippy -- -D warnings
