--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
 thiserror = "1.0"
+async-trait = "0.1.68"
+reqwest = {version = "0.11.18", features = ["json"]}
