--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "io-util"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
 thiserror = "1.0"
 async-trait = "0.1.68"
-reqwest = {version = "0.11.18", features = ["json"]}
